# triad-rdf

./: CMakeLists.txt  INSTALL  LICENSE  NOTICE  README.md  log4j.properties
cts/: CMakeLists.txt  cts.hpp
cts/infra/: BitSet.hpp  Pool.cpp  QueryGraph.cpp  QueryGraph.hpp  VarPool.hpp
cts/parser/: SPARQLLexer.cpp  SPARQLParser.cpp
cts/plangen/: Costs.hpp  Plan.cpp  Plan.hpp  PlanGen.cpp  PlanGen.hpp
cts/semana/: SemanticAnalysis.cpp  SemanticAnalysis.hpp
database/: CMakeLists.txt  Database.cpp  Database.hpp  Dictionary.cpp  Dictionary.hpp  Statistics.cpp  Statistics.hpp  TripleStore.cpp  TripleStore.hpp
parser/: CMakeLists.txt  Parser.cpp  Parser.hpp  Type.hpp
processor/: CMakeLists.txt  TriADProcessor.cpp  TriADProcessor.hpp
queryengine/: CMakeLists.txt  Operator.cpp  Operator.hpp  QueryEngine.cpp  QueryEngine.hpp  Relation.cpp  Relation.hpp
tools/: CMakeLists.txt
tools/graphformats/: CMakeLists.txt  MetisFormat.cpp  MetisFormat.hpp
tools/triad/: gFormats.cpp  triADMain.cpp
utils/: BitArray.cpp  BitArray.hpp  CMakeLists.txt  FastMap.cpp  FastMap.hpp  Trie.cpp  Trie.hpp  Utilities.cpp  Utilities.hpp  fastlz.cc  s16.cpp  s16.hpp
